[gd_scene load_steps=11 format=2]

[ext_resource path="res://AutoLoad/Pausemenu.gd" type="Script" id=1]
[ext_resource path="res://Gamemenu/BG/francesco-ungaro-jqKS0ET-wGE-unsplash.jpg" type="Texture" id=2]
[ext_resource path="res://Gamemenu/font/Adventurer.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.54902 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -40.0
margin_right = 66.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 132.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Continue"
flat = true

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 132.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Exit"
flat = true

[node name="Label" type="Label" parent="."]
margin_left = 352.0
margin_top = 408.0
margin_right = 411.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 2 )
text = "Sword Lv."
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 480.0
margin_top = 407.0
margin_right = 539.0
margin_bottom = 431.0
custom_fonts/font = SubResource( 2 )
text = "Axe Lv."
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = 633.0
margin_top = 407.0
margin_right = 692.0
margin_bottom = 431.0
custom_fonts/font = SubResource( 2 )
text = "Bow Lv."
align = 1
valign = 1

[node name="Sword" type="Label" parent="."]
margin_left = 362.0
margin_top = 436.0
margin_right = 402.0
margin_bottom = 450.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1

[node name="Axe" type="Label" parent="."]
margin_left = 489.0
margin_top = 433.0
margin_right = 529.0
margin_bottom = 447.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1

[node name="Bow" type="Label" parent="."]
margin_left = 646.0
margin_top = 430.0
margin_right = 686.0
margin_bottom = 444.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="SwordLV" type="Button" parent="."]
margin_left = 354.0
margin_top = 465.0
margin_right = 420.0
margin_bottom = 487.0
custom_fonts/font = SubResource( 7 )
text = "Buy LV."
icon_align = 1

[node name="AxeLV" type="Button" parent="."]
margin_left = 474.0
margin_top = 463.0
margin_right = 540.0
margin_bottom = 485.0
custom_fonts/font = SubResource( 7 )
text = "Buy LV."
icon_align = 1

[node name="BowLV" type="Button" parent="."]
margin_left = 632.0
margin_top = 463.0
margin_right = 698.0
margin_bottom = 485.0
custom_fonts/font = SubResource( 7 )
text = "Buy LV."
icon_align = 1

[node name="ALCoin" type="Label" parent="."]
margin_left = 455.0
margin_top = 523.0
margin_right = 515.0
margin_bottom = 558.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 8 )
text = "30 Coin 
"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="SwordLV" to="." method="_on_SwordLV_pressed"]
[connection signal="pressed" from="AxeLV" to="." method="_on_AxeLV_pressed"]
[connection signal="pressed" from="BowLV" to="." method="_on_BowLV_pressed"]
